@@ -15,7 +15,7 @@
     <a href="https://discord.gg/4DWzD7pGE5">COMMUNITY DISCORD</a>
     <br/>
     <a href="https://aws.amazon.com/marketplace/pp/prodview-ogtt5hfhzkq6a">AWS Marketplace</a>  •
-    <a href="https://www.producthunt.com/products/ui-for-apache-kafka/reviews/new">ProductHunt</a>
+    <a href="https://www.producthunt.com/products/ui-for-apache-kafka/reviews/new">ProductHunt</a>  •
     <a href="https://github.com/provectus/kafka-ui/blob/master/README.md">Official README</a>
 </p>
 
@@ -39,3 +39,29 @@ This has two advantages: it aligns display items with Kafka-Manager and makes th
 * Adapted the retrieval of ActiveController to the Kraft protocol, addressing a bug in the official version.
 
 * Replaced the concept of the jmxport configuration item. Previously, a cluster could only use one jmxport. Now, the concept of jmxport-offset has been introduced, where the actual jmxport of the broker = brokerport + jmxport-offset, thus supporting single-machine mixed deployment scenarios.
+
+#### Build Approach
+
+* Setup nodejs by nvm
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;nvm install 16.15.0
+
+* Root directory of the project
+
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;mvn clean package -DskipTests
+
+* Build react-app and copy to kafka-ui-api
+
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;cd kafka-ui-react-app/
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;npm run build
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;cd build/
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;cp -r * ../../kafka-ui-api/src/main/resources/static/
+
+* Root directory of the project
+
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;mvn clean package -DskipTests
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;cd kafka-ui-api/target 
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Then you can see the release jar "kafka-ui-0.7.2.jar"
+
+* Run jar
+
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;java  -Dspring.config.additional-location=application-local.yml --add-opens java.rmi/javax.rmi.ssl=ALL-UNNAMED -jar kafka-ui-api-0.7.2.jar
